[gd_scene load_steps=3 format=3 uid="uid://yatkqecbxbpq"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_u4nwk"]
[ext_resource type="Theme" uid="uid://bu4rq474a7305" path="res://custom_theme.tres" id="1_vj25g"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
script = ExtResource("1_u4nwk")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.5
offset_top = -116.0
offset_right = 46.5
offset_bottom = -93.0
grow_horizontal = 2
theme = ExtResource("1_vj25g")
text = "SPREAKOUT"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -55.5
offset_right = 47.5
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vj25g")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_vj25g")
theme_override_constants/separation = 5

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start playing."
text = "PLAY"

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Attempts to load a saved game file if one exists."
theme = ExtResource("1_vj25g")
text = "RESUME"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Go to the options menu."
text = "OPTIONS"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Quits the game, doesn't work if you're playing on itch.io."
text = "EXIT"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1000.0
offset_top = -500.0
offset_right = 920.0
offset_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.212897, 0.272906, 0.394313, 1)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
